Configure project for GitHub Pages deployment

--- a/package.json
+++ b/package.json
@@ -1,20 +1,25 @@
 {
-  "name": "a1",
+  "name": "d26-i7-SimWork",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://hunterho07.github.io/d26-i7-SimWork",
   "scripts": {
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "export": "next build",
+    "predeploy": "npm run export",
+    "deploy": "gh-pages -d out"
   },
   "dependencies": {
+    "next": "15.3.2",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "next": "15.3.2"
+    "react-dom": "^19.0.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
+    "gh-pages": "^6.3.0",
     "tailwindcss": "^4"
   }
 }
