--- a/package.json
+++ b/package.json
@@ -4,11 +4,11 @@
   "private": true,
   "homepage": "https://hunterho07.github.io/d26-i7-SimWork",
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "export": "next build && touch out/.nojekyll",
+    "export": "next build && touch out/.nojekyll && copy public\\.nojekyll out\\.nojekyll",
     "predeploy": "npm run export",
     "deploy": "gh-pages -d out -t true"
   },
