--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "lint": "next lint",
     "export": "next build && touch out/.nojekyll && copy public\\.nojekyll out\\.nojekyll",
     "predeploy": "npm run export",
-    "deploy": "gh-pages -d out -t true"
+    "deploy": "gh-pages -d out"
   },
   "dependencies": {
     "next": "15.3.2",
