--- a/package.json
+++ b/package.json
@@ -8,18 +8,19 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "export": "next build && touch out/.nojekyll && copy public\\.nojekyll out\\.nojekyll",
+    "export": "next build && touch out/.nojekyll && cp public/404.html out/404.html",
     "predeploy": "npm run export",
-    "deploy": "gh-pages -d out"
+    "deploy": "gh-pages -d out -t true"
   },
   "dependencies": {
-    "next": "15.3.2",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "next": "14.1.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "@tailwindcss/postcss": "^4",
+    "autoprefixer": "^10.4.21",
     "gh-pages": "^6.3.0",
-    "tailwindcss": "^4"
+    "postcss": "^8.5.3",
+    "tailwindcss": "^3.3.0"
   }
 }
